--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -674,6 +674,7 @@ body, html {
   border-color: rgba(0, 0, 0, 0.5);
   transform: translateY(-2px);
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  color: white;
 }
 
 /* Category-List */
