--- a/src/main/resources/templates/products/product-list.html
+++ b/src/main/resources/templates/products/product-list.html
@@ -83,7 +83,7 @@
                 <div class="card mb-5" th:classappend="${product.stock <= 0} ? 'disabled' : ''">
                   <img th:src="${product.imageUrl}" class="card-img-top" th:alt="${product.name}">
                   <div class="card-body">
-                    <h5 class="card-title" th:text="${product.name}"></h5>
+                    <h5 class="card-title" th:text="${#strings.abbreviate(product.name, 25)}"></h5>
                     <p class="card-text">Ціна: <span th:text="${product.price}"></span> ₴</p>
                     <p class="card-text">
                       <span th:if="${product.stock > 0}" th:text="'Кількість на складі: ' + ${product.stock}"></span>
