--- a/src/main/resources/templates/orders/details.html
+++ b/src/main/resources/templates/orders/details.html
@@ -70,7 +70,7 @@
             <button type="submit">Скасувати замовлення</button>
           </form>
           <form th:action="@{/payment/create}" method="post"
-                th:if="${order.status.name() == 'NEW' and !isAdmin}">
+                th:if="${order.status.name() == 'NEW' || order.status.name() == 'PROCESSING' and !isAdmin}">
             <input type="hidden" name="orderId" th:value="${order.id}"/>
             <button type="submit" class="btn-payment">Оплатити замовлення</button>
           </form>
